# hypermnesia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Package.resolved  Package.swift  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
Scripts/: make-app.sh  make-icon.py  release.sh  sync-site-version.sh
Sources/HypermnesiaApp/: ActivityFeedView.swift  AppModel.swift  BrainMRIView.swift  DreamCoordinator.swift  DreamJournalView.swift  HypermnesiaApp.swift  InspectorAnalytics.swift  MemoryViews.swift  Notifier.swift  QueryView.swift  QuickOpenView.swift  RootView.swift  ScreenshotHarness.swift  Settings.swift  SettingsModel.swift  ShareCard.swift  SharePreviewHarness.swift  Support.swift  TrendsView.swift  Updater.swift
Sources/HypermnesiaKit/: Hypermnesia.swift  SampleMemories.swift
Sources/hypermnesia/: CLI.swift  MemoryCommands.swift  SetupCommands.swift
docs/: IMPLEMENTATION-PLAN.md  PACKAGING.md  ROADMAP.md
docs/media/: README.md
evals/: README.md  RESULTS.md  __init__.py  requirements.txt
evals/scenarios/cli_ledger_seed/: pyproject.toml
evals/scenarios/cli_ledger_seed/ledger/: __init__.py  __main__.py  cli.py  store.py
evals/scenarios/cli_ledger_seed/tests/: test_ledger_baseline.py
evals/scenarios/python_webapp_seed/: README.md  pyproject.toml
evals/scenarios/python_webapp_seed/app/: __init__.py  db.py  main.py  models.py
evals/scenarios/python_webapp_seed/tests/: test_tasks_baseline.py
packaging/: Hypermnesia.entitlements  sparkle-public-ed-key.txt
site/: README.md  wrangler.jsonc
(+220 files in other folders)
